tests/baselines/reference/objectTypesIdentityWithConstructSignatures.errors.txt
==== tests/cases/compiler/objectTypesIdentityWithConstructSignatures.ts (9 errors) ====
    // object types are identical structurally
    
    class A {
        constructor(x: string) { }
    }
    
    class B {
        constructor(x: string) { }
    }
    
    class C<T> {
        constructor(x: T) { }
    }
    
    interface I {
        new(x: string);
    }
    
    interface I2<T> {
        new(x: T): T;
    }
    
    var a: { new(x: string) }
    
    function foo1(x: A);
    function foo1(x: A); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(26,1): error TS2144: Duplicate overload signature for 'foo1'.
    function foo1(x: any) { }
    
    function foo1b(x: B);
    function foo1b(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(30,1): error TS2144: Duplicate overload signature for 'foo1b'.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
    function foo1c(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(34,1): error TS2144: Duplicate overload signature for 'foo1c'.
    function foo1c(x: any) { }
    
    function foo2(x: I);
    function foo2(x: I); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(38,1): error TS2144: Duplicate overload signature for 'foo2'.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(42,1): error TS2144: Duplicate overload signature for 'foo3'.
    function foo3(x: any) { }
    
    function foo5(x: A);
    function foo5(x: B); // error
    ~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(46,1): error TS2144: Duplicate overload signature for 'foo5'.
    function foo5(x: any) { }
    
    function foo5b(x: A);
    function foo5b(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(50,1): error TS2144: Duplicate overload signature for 'foo5b'.
    function foo5b(x: any) { }
    
    function foo6(x: A);
    function foo6(x: I); // ok 
    function foo6(x: any) { }
    
    function foo7(x: A);
    function foo7(x: typeof a); // ok
    function foo7(x: any) { }
    
    function foo8(x: B);
    function foo8(x: I); // ok
    function foo8(x: any) { }
    
    function foo9(x: B);
    function foo9(x: C<string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(66,1): error TS2144: Duplicate overload signature for 'foo9'.
    function foo9(x: any) { }
    
    function foo10(x: B);
    function foo10(x: typeof a); // ok
    function foo10(x: any) { }
    
    function foo12(x: I);
    function foo12(x: C<string>); // ok
    function foo12(x: any) { }
    
    function foo12b(x: I2<string>);
    function foo12b(x: C<string>); // ok
    function foo12b(x: any) { }
    
    function foo13(x: I);
    function foo13(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithConstructSignatures.ts(82,1): error TS2144: Duplicate overload signature for 'foo13'.
    function foo13(x: any) { }
    
    function foo15(x: I2<string>);
    function foo15(x: C<number>); // ok
    function foo15(x: any) { }